# Batch_MLIP

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  NOTICE.md  PROJECT_MANIFEST.json  PROVENANCE.json  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
atombit_batch/: __init__.py  __main__.py
batch_mlip/: __init__.py  __main__.py
benchmarks/: __init__.py  analyze_multi_gpu_sharding.py  benchmark_controlled_matrix.py  benchmark_eval_capacity_point.py  benchmark_integrated_neighbors.py  benchmark_mace_variable_cell_scaling.py  benchmark_memory_planner.py  benchmark_multi_gpu_sharding.py  benchmark_neighbor_backend.py  benchmark_production.py  benchmark_relaxation.py  benchmark_relaxation_point.py  benchmark_scaling.py  benchmark_variable_cell_scaling.py  diagnose_atombit_cutoff_across_structures.py  diagnose_atombit_degree_discontinuity.py  diagnose_atombit_directional_derivative.py  diagnose_atombit_line_profile.py  summarize_bfgs_active_refill.py  summarize_bfgs_fire_scaling.py  summarize_bfgs_float64_scaling.py  summarize_bfgs_lazy_refill.py  summarize_bfgs_mixed_scaling.py  summarize_compaction.py  summarize_controlled_matrix.py  summarize_direct_frontier.py  summarize_large_batch_relaxation.py  summarize_smooth_optimizer_frontier.py  summarize_variable_cell_scaling.py  t2_fixed_samples.json  validate_bfgs_production.py  validate_mace_off_adapter.py  validate_neighbor_cache.py  validate_optimizer_interface.py  validate_variable_cell_production.py
configs/: atombit_model_example.yaml  nve_toy.yaml  nvt_toy.yaml  relax_atombit_template.yaml  relax_toy.yaml  relax_variable_cell_template.yaml  run_controlled_workload_template.yaml
docs/: agent_handoff.md  architecture.md  configuration.md  roadmap.md  validation.md  workload-aware-performance.md
examples/: __init__.py  atombit_loader.py  custom_model_adapter.py  make_demo_structures.py  python_api.py  run_pickled_model.py
experiments/: TEMPLATE.yaml
src/: Calculator.py  Utils.py  __init__.py  calculator.py  model.py  modules.py  neighbors.py  utils.py
tests/: conftest.py  test_batch_equivalence.py  test_benchmark_variable_cell_scaling.py  test_bfgs.py  test_bfgs_line_search.py  test_calculator_api.py  test_cli.py  test_dense_neighbors.py  test_mace_optimization.py  test_md.py  test_multi_gpu_execution.py  test_neighbor_skin.py  test_optimizer_interface.py  test_package_layout.py  test_planning.py  test_reference_model.py  (+7 more)
(+296 files in other folders)
