[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batch-mlip"
version = "0.2.0"
description = "Model-independent batched geometry optimization and MD for MLIPs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Project owner"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "ase>=3.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
performance = ["matscipy>=1.0"]
mace = ["mace-torch>=0.3.14"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "build>=1.2",
]

[project.scripts]
batch-mlip = "batch_mlip.interfaces.cli:main"
batch-mlip-workload = "batch_mlip.workloads.cli:main"
atombit-batch = "batch_mlip.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["batch_mlip*", "atombit_batch*", "src*", "examples*"]
exclude = ["tests*", "benchmarks*", "tools*", "original_uploads*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "mace: optional MACE foundation-model integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/*.py" = ["E", "F", "I", "B", "UP"]
